[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/UI_THEME.tres" type="Theme" id=1]
[ext_resource path="res://level/LevelSelect.gd" type="Script" id=2]
[ext_resource path="res://assets/Textures/Track1Preview.PNG" type="Texture" id=3]
[ext_resource path="res://assets/Textures/Track3Preview.PNG" type="Texture" id=4]
[ext_resource path="res://assets/Textures/Track2Preview.PNG" type="Texture" id=5]

[node name="LevelSelect" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1.948
margin_right = 1918.05
margin_bottom = 1082.0
theme = ExtResource( 1 )
color = Color( 0.52549, 0.168627, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 36.2721
margin_top = 13.5442
margin_right = 131.272
margin_bottom = 53.5442
rect_scale = Vector2( 3, 3 )
theme = ExtResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="Button" parent="."]
margin_left = 1606.0
margin_top = 10.0
margin_right = 1698.0
margin_bottom = 50.0
rect_scale = Vector2( 3, 3 )
theme = ExtResource( 1 )
text = "Tutorial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Track1" type="Button" parent="."]
margin_left = 129.155
margin_top = 195.146
margin_right = 1333.15
margin_bottom = 955.146
rect_scale = Vector2( 0.4, 0.4 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Track2" type="Button" parent="."]
margin_left = 722.519
margin_top = 156.773
margin_right = 1345.52
margin_bottom = 658.773
rect_scale = Vector2( 0.8, 0.8 )
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Track3" type="Button" parent="."]
margin_left = 1333.71
margin_top = 174.949
margin_right = 2122.71
margin_bottom = 782.949
rect_scale = Vector2( 0.6, 0.6 )
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Track1" to="." method="_on_Track1_pressed"]
[connection signal="pressed" from="Track2" to="." method="_on_Track2_pressed"]
[connection signal="pressed" from="Track3" to="." method="_on_Track3_pressed"]
